Version 2.02.171 - 
==================================

Version 2.02.170 - 13th April 2017
==================================
  Introduce global/fsadm_executable to make fsadm path configurable.
  Look for limited thin pool metadata size when using 16G metadata.
  Add lvconvert pool creation rule disallowing options with poolmetadata.
  Fix lvconvert when the same LV is incorrectly reused in options.
  Fix lvconvert VG name validation in option values.
  Fix missing lvmlockd LV locks in lvchange and lvconvert.
  Fix dmeventd setup for lvchange --poll.
  Fix use of --poll and --monitor with lvchange and vgchange.
  Disallow lvconvert of hidden LV to a pool.
  Ignore --partial option when not used for activation.
  Allow --activationmode option with lvchange --refresh.
  Better message on lvconvert --regionsize
  Allow valid lvconvert --regionsize change
  Add raid10 alias raid10_near
  Handle insufficient PVs on lvconvert takeover
  Fix SIGINT blocking to prevent corrupted metadata
  Fix systemd unit existence check for lvmconf --services --startstopservices.
  Check and use PATH_MAX buffers when creating vgrename device paths.

Version 2.02.169 - 28th March 2017
==================================
  Automatically decide whether '-' in a man page is a hyphen or a minus sign.
  Add build-time configuration command line to 'lvm version' output.
  Handle known table line parameter order change in specific raid target vsns.
  Conditionally reject raid convert to striped/raid0* after reshape.
  Ensure raid6 upconversion restrictions.
  Adjust mirror & raid dmeventd plugins for new lvconvert --repair behaviour.
  Disable lvmetad when lvconvert --repair is run.
  Remove obsolete lvmchange binary - convert to built-in command.
  Show more information for cached volumes in lvdisplay [-m].
  Add option for lvcreate/lvconvert --cachemetadataformat auto|1|2.
  Support cache segment with configurable metadata format.
  Add allocation/cache_metadata_format profilable settings.