@@ -82,7 +82,8 @@ udev_prefix = @udev_prefix@
 sysconfdir = @sysconfdir@
 rootdir = $(DESTDIR)/
 bindir = $(DESTDIR)@bindir@
-confdir = $(DESTDIR)@CONFDIR@/lvm
+confdir = $(DESTDIR)$(exec_prefix)@CONFDIR@/lvm
+profiledir = $(confdir)/@DEFAULT_PROFILE_SUBDIR@
 includedir = $(DESTDIR)@includedir@
 libdir = $(DESTDIR)@libdir@
 libexecdir = $(DESTDIR)@libexecdir@
